--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,4 +7,6 @@ ca-certificates inotify-tools python3 python3-pip ruby
 
 RUN pip install --break-system-packages xml2rfc
 
-RUN gem install kramdown-rfc2629
+RUN gem update && gem install kramdown-rfc2629
+
+RUN apt-get clean && gem cleanup
